Quick z-index fix

--- a/client/style.css
+++ b/client/style.css
@@ -76,7 +76,7 @@ body {
   right: 0;
   margin-top: 10px;
   margin-right: 20px;
-  z-index: 99;
+  z-index: 98;
 }
 
 .visiblePanel {
@@ -225,6 +225,7 @@ td.replyBody {
 
 div.postDialogWrapper {
   position: fixed;
+  z-index: 99;
   left: 0;
   top: 0;
   width: 100%;
